--- a/app/src/main/res/layout/fragment_valuations.xml
+++ b/app/src/main/res/layout/fragment_valuations.xml
@@ -77,7 +77,7 @@
             android:layout_height="40dp"
             android:layout_marginStart="22dp"
             android:ems="10"
-            android:hint="example 0.05 for 5%"
+            android:hint="example 0.05 or 5%"
             android:textSize="19sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/param3" />
