--- a/app/src/main/res/layout/fragment_about.xml
+++ b/app/src/main/res/layout/fragment_about.xml
@@ -159,13 +159,13 @@
                     app:layout_constraintTop_toBottomOf="@+id/pythonLogo" />
 
                 <ImageView
-                    android:id="@+id/quandlLogo"
+                    android:id="@+id/iexLogo"
                     android:layout_width="185dp"
                     android:layout_height="80dp"
                     android:layout_marginStart="5dp"
                     android:layout_marginTop="5dp"
                     android:layout_marginBottom="15dp"
-                    android:src="@drawable/quandl_logo"
+                    android:src="@drawable/iex_logo"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/chaquopyLogo" />
@@ -181,7 +181,7 @@
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="1.0"
-                    app:layout_constraintStart_toEndOf="@+id/quandlLogo"
+                    app:layout_constraintStart_toEndOf="@+id/iexLogo"
                     app:layout_constraintTop_toBottomOf="@+id/anacondaLogo" />
 
 
