--- a/app/src/main/res/layout/fragment_about.xml
+++ b/app/src/main/res/layout/fragment_about.xml
@@ -92,7 +92,7 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="About Data Driven Finance:\nA Native-Android trading app that aims to provide insightful information about investment decisions using financial modellings and predictive analytics. The app is created with the following tech stack. Click on the images below for their brief details.\n"
+                    android:text="About Data Driven Finance:\nA Native-Android trading app that aims to provide insightful information about investment decisions using financial modellings and predictive analytics. The app is created with the following tech stack. Click on the images below for their brief details."
                     android:textSize="16sp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -121,6 +121,7 @@
                     android:layout_width="185dp"
                     android:layout_height="80dp"
                     android:layout_marginStart="5dp"
+                    android:padding="7dp"
                     android:src="@drawable/kotlin_logo"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
@@ -129,7 +130,9 @@
                     android:id="@+id/pythonLogo"
                     android:layout_width="185dp"
                     android:layout_height="80dp"
+                    android:layout_marginTop="2dp"
                     android:layout_marginEnd="5dp"
+                    android:padding="-10dp"
                     android:src="@drawable/python_logo"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="1.0"
@@ -150,8 +153,9 @@
                     android:id="@+id/anacondaLogo"
                     android:layout_width="185dp"
                     android:layout_height="80dp"
-                    android:layout_marginTop="5dp"
+                    android:layout_marginTop="3dp"
                     android:layout_marginEnd="5dp"
+                    android:padding="2dp"
                     android:src="@drawable/anaconda_logo"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="1.0"
@@ -164,7 +168,8 @@
                     android:layout_height="80dp"
                     android:layout_marginStart="5dp"
                     android:layout_marginTop="5dp"
-                    android:layout_marginBottom="15dp"
+                    android:padding="5dp"
+                    android:layout_marginBottom="25dp"
                     android:src="@drawable/iex_logo"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -174,8 +179,9 @@
                     android:id="@+id/androidStudioLogo"
                     android:layout_width="185dp"
                     android:layout_height="80dp"
-                    android:layout_marginTop="5dp"
+                    android:layout_marginTop="15dp"
                     android:layout_marginEnd="5dp"
+                    android:padding="5dp"
                     android:layout_marginBottom="15dp"
                     android:src="@drawable/android_studio_logo"
                     app:layout_constraintBottom_toBottomOf="parent"
