--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,7 @@
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView2"
         android:layout_width="wrap_content"
-        android:layout_height="80dp"
+        android:layout_height="70dp"
         android:layout_alignParentTop="true"
         app:cardBackgroundColor="#AE4CAF50"
         app:cardElevation="2dp">
@@ -50,6 +50,7 @@
             android:id="@+id/tabLayoutId"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:padding="2dp"
             android:background="@color/colorAccent"
             android:orientation="vertical"
             app:tabMode="scrollable" />
