--- a/app/src/main/res/layout/fragment_about.xml
+++ b/app/src/main/res/layout/fragment_about.xml
@@ -10,8 +10,8 @@
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
         <androidx.cardview.widget.CardView
             android:id="@+id/creatorBio"
@@ -25,7 +25,8 @@
 
             <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                android:background="@color/colorPrimary">
 
                 <de.hdodenhof.circleimageview.CircleImageView
                     android:id="@+id/creatorImg"
@@ -48,7 +49,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="0dp"
                         android:text="Creator Biography"
-                        android:textColor="#000000"
+                        android:textColor="@color/colorPrimaryDark"
                         android:textSize="20sp"
 
                         android:textStyle="bold"
@@ -63,6 +64,7 @@
                         android:layout_below="@+id/creatorDesc1"
                         android:layout_marginTop="5dp"
                         android:text="Name: Yutaka Obi\nEducation: University of Wisconsin-Madison, Bachelor of Science in Economics.\nPassionate about Finance and Data Science."
+                        android:textColor="@color/colorPrimaryDark"
                         android:textSize="17sp"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
@@ -87,12 +89,14 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:paddingHorizontal="5dp">
+                android:paddingHorizontal="5dp"
+                android:background="@color/colorPrimary">
 
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="About Data Driven Finance:\nA Native-Android trading app that aims to provide insightful information about investment decisions using financial modellings and predictive analytics. The app is created with the following tech stack. Click on the images below for their brief details.\n"
+                    android:textColor="@color/colorPrimaryDark"
                     android:textSize="16sp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -113,7 +117,8 @@
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:background="@color/colorPrimary">
 
 
                 <ImageView
