--- a/app/src/main/res/layout/fragment_algotrading.xml
+++ b/app/src/main/res/layout/fragment_algotrading.xml
@@ -35,6 +35,7 @@
                     android:id="@+id/smaRes"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:textColor="@color/colorPrimaryDark"
                     android:textSize="19sp" />
 
             </LinearLayout>
@@ -52,13 +53,15 @@
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                android:background="@color/colorPrimary">
 
                 <Spinner
                     android:id="@+id/selectStockSma"
                     android:layout_width="185dp"
                     android:layout_height="wrap_content"
                     app:layout_constraintBottom_toBottomOf="parent"
+                    android:textColor="@color/colorPrimaryDark"
                     app:layout_constraintEnd_toStartOf="@+id/smaClear"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
