--- a/app/src/main/res/layout/fragment_bondvaluation.xml
+++ b/app/src/main/res/layout/fragment_bondvaluation.xml
@@ -33,6 +33,7 @@
                     android:id="@+id/bondRes"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:textColor="@color/colorPrimaryDark"
                     android:textSize="19sp" />
 
             </LinearLayout>
@@ -50,12 +51,14 @@
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                android:background="@color/colorPrimary">
 
                 <Spinner
                     android:id="@+id/selectBond"
                     android:layout_width="195dp"
                     android:layout_height="wrap_content"
+                    android:textColor="@color/colorPrimaryDark"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toStartOf="@+id/bondClear"
                     app:layout_constraintStart_toStartOf="parent"
