--- a/app/src/main/res/layout/fragment_macrodata.xml
+++ b/app/src/main/res/layout/fragment_macrodata.xml
@@ -52,6 +52,7 @@
                         android:layout_marginStart="5dp"
                         android:layout_marginTop="10dp"
                         android:text="Population:"
+                        android:textColor="@color/colorPrimaryDark"
                         android:textSize="19sp"
                         app:layout_constraintStart_toEndOf="@+id/populationImg"
                         app:layout_constraintTop_toTopOf="@+id/populationImg" />
@@ -98,6 +99,7 @@
                         android:layout_marginStart="5dp"
                         android:layout_marginTop="10dp"
                         android:text="National GDP:"
+                        android:textColor="@color/colorPrimaryDark"
                         android:textSize="19sp"
                         app:layout_constraintStart_toEndOf="@+id/gdpImg"
                         app:layout_constraintTop_toTopOf="@+id/gdpImg" />
@@ -142,6 +144,7 @@
                         android:layout_marginStart="5dp"
                         android:layout_marginTop="10dp"
                         android:text="Government Expenditure:"
+                        android:textColor="@color/colorPrimaryDark"
                         android:textSize="19sp"
                         app:layout_constraintStart_toEndOf="@+id/govSpendingImg"
                         app:layout_constraintTop_toTopOf="@+id/govSpendingImg" />
@@ -186,6 +189,7 @@
                         android:layout_marginStart="5dp"
                         android:layout_marginTop="10dp"
                         android:text="National Debt:"
+                        android:textColor="@color/colorPrimaryDark"
                         android:textSize="19sp"
                         app:layout_constraintStart_toEndOf="@+id/debtImg"
                         app:layout_constraintTop_toTopOf="@+id/debtImg" />
@@ -231,6 +235,7 @@
                         android:layout_marginStart="5dp"
                         android:layout_marginTop="10dp"
                         android:text="Unemployment Rate:"
+                        android:textColor="@color/colorPrimaryDark"
                         android:textSize="19sp"
                         app:layout_constraintStart_toEndOf="@+id/unemploymentImg"
                         app:layout_constraintTop_toTopOf="@+id/unemploymentImg" />
@@ -274,6 +279,7 @@
                         android:layout_marginStart="5dp"
                         android:layout_marginTop="10dp"
                         android:text="Import:"
+                        android:textColor="@color/colorPrimaryDark"
                         android:textSize="19sp"
                         app:layout_constraintStart_toEndOf="@+id/importImg"
                         app:layout_constraintTop_toTopOf="@+id/importImg" />
@@ -317,6 +323,7 @@
                         android:layout_marginStart="5dp"
                         android:layout_marginTop="10dp"
                         android:text="Export:"
+                        android:textColor="@color/colorPrimaryDark"
                         android:textSize="19sp"
                         app:layout_constraintStart_toEndOf="@+id/exportImg"
                         app:layout_constraintTop_toTopOf="@+id/exportImg" />
@@ -360,6 +367,7 @@
                 android:layout_height="60dp"
                 android:layout_marginStart="5dp"
                 android:layout_marginEnd="5dp"
+                android:textColor="@color/colorPrimaryDark"
                 android:textSize="19sp"
                 app:layout_constraintBottom_toTopOf="@+id/countryClear"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -369,6 +377,7 @@
                 android:id="@+id/selectCountries"
                 android:layout_width="200dp"
                 android:layout_height="wrap_content"
+                android:textColor="@color/colorPrimaryDark"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="@+id/countries"
                 app:layout_constraintTop_toBottomOf="@+id/countries" />
