--- a/app/src/main/res/layout/fragment_valueatrisk.xml
+++ b/app/src/main/res/layout/fragment_valueatrisk.xml
@@ -35,7 +35,8 @@
                     android:id="@+id/varRes"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textSize="19sp" />
+                    android:textSize="19sp"
+                    android:textColor="@color/colorPrimaryDark"/>
 
             </LinearLayout>
 
@@ -52,13 +53,15 @@
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                android:background="@color/colorPrimary">
 
                 <Spinner
                     android:id="@+id/selectStockVar"
                     android:layout_width="185dp"
                     android:layout_height="wrap_content"
                     app:layout_constraintBottom_toBottomOf="parent"
+                    android:textColor="@color/colorPrimaryDark"
                     app:layout_constraintEnd_toStartOf="@+id/varClear"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
