--- a/app/src/main/res/layout/list_row.xml
+++ b/app/src/main/res/layout/list_row.xml
@@ -15,7 +15,8 @@
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:background="@color/colorPrimary">
 
             <TextView
                 android:id="@+id/title"
@@ -36,7 +37,7 @@
                 android:layout_marginStart="2dp"
                 android:layout_marginTop="2dp"
                 android:layout_marginEnd="2dp"
-                android:textColor="#4D4E4F"
+                android:textColor="@color/colorPrimaryDark"
                 android:textSize="16sp" />
 
             <Button
@@ -45,6 +46,7 @@
                 android:layout_height="40dp"
                 android:layout_below="@id/description"
                 android:layout_alignParentRight="true"
+                android:textColor="@color/colorPrimaryDark"
                 android:background="?attr/actionModeShareDrawable"
                 android:paddingBottom="15dp" />
 
@@ -54,6 +56,7 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@id/description"
                 android:layout_toLeftOf="@id/link_btn"
+                android:textColor="@color/colorPrimaryDark"
                 android:layout_marginStart="2dp"
                 android:layout_marginTop="2dp"
                 android:paddingBottom="15dp"/>
