--- a/app/src/main/res/layout/fragment_macrodata.xml
+++ b/app/src/main/res/layout/fragment_macrodata.xml
@@ -33,7 +33,6 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content">
 
-
                     <ImageView
                         android:id="@+id/populationImg"
                         android:layout_width="100dp"
@@ -57,7 +56,6 @@
                         app:layout_constraintStart_toEndOf="@+id/populationImg"
                         app:layout_constraintTop_toTopOf="@+id/populationImg" />
 
-
                     <Button
                         android:id="@+id/populationAbsBtn"
                         android:layout_width="wrap_content"
@@ -78,8 +76,6 @@
                         android:textSize="14sp"
                         app:layout_constraintBottom_toBottomOf="@+id/populationImg"
                         app:layout_constraintStart_toEndOf="@+id/populationAbsBtn" />
-
-
 
                     <ImageView
                         android:id="@+id/gdpImg"
@@ -125,7 +121,6 @@
                         app:layout_constraintBottom_toBottomOf="@+id/gdpImg"
                         app:layout_constraintStart_toEndOf="@+id/gdpAbsBtn" />
 
-
                     <ImageView
                         android:id="@+id/govSpendingImg"
                         android:layout_width="100dp"
@@ -170,7 +165,6 @@
                         app:layout_constraintBottom_toBottomOf="@+id/govSpendingImg"
                         app:layout_constraintStart_toEndOf="@+id/govSpendingAbsBtn" />
 
-
                     <ImageView
                         android:id="@+id/debtImg"
                         android:layout_width="100dp"
@@ -214,8 +208,6 @@
                         android:textSize="14sp"
                         app:layout_constraintBottom_toBottomOf="@+id/debtImg"
                         app:layout_constraintStart_toEndOf="@+id/debtAbsBtn" />
-
-
 
                     <ImageView
                         android:id="@+id/unemploymentImg"
@@ -349,7 +341,6 @@
                         app:layout_constraintBottom_toBottomOf="@+id/exportImg"
                         app:layout_constraintStart_toEndOf="@+id/exportAbsBtn" />
 
-
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
             </LinearLayout>
@@ -357,41 +348,51 @@
 
         </ScrollView>
 
-        <androidx.constraintlayout.widget.ConstraintLayout
+        <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="match_parent" >
+            android:layout_height="60dp"
+            app:layout_constraintTop_toBottomOf="@+id/macroScroll">
 
-            <TextView
-                android:id="@+id/countries"
+            <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="60dp"
-                android:layout_marginStart="5dp"
-                android:layout_marginEnd="5dp"
-                android:textColor="@color/colorPrimaryDark"
-                android:textSize="19sp"
-                app:layout_constraintBottom_toTopOf="@+id/countryClear"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent" />
+                android:layout_height="wrap_content">
 
-            <Spinner
-                android:id="@+id/selectCountries"
-                android:layout_width="200dp"
-                android:layout_height="wrap_content"
-                android:textColor="@color/colorPrimaryDark"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="@+id/countries"
-                app:layout_constraintTop_toBottomOf="@+id/countries" />
+                <TextView
+                    android:id="@+id/countries"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/colorPrimaryDark"
+                    android:textSize="19sp"
+                    android:paddingHorizontal="10dp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
 
-            <Button
-                android:id="@+id/countryClear"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="5dp"
-                android:text="Clear Country List"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent" />
+            </androidx.constraintlayout.widget.ConstraintLayout>
 
-        </androidx.constraintlayout.widget.ConstraintLayout>
+        </ScrollView>
+
+
+        <Spinner
+            android:id="@+id/selectCountries"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="21dp"
+            android:textColor="@color/colorPrimaryDark"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/countryClear"
+            app:layout_constraintStart_toStartOf="parent" />
+
+        <Button
+            android:id="@+id/countryClear"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="5dp"
+            android:text="Clear Country List"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
