--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -19,23 +20,21 @@
             android:layout_height="match_parent">
 
             <ImageView
-                android:id="@+id/imageView3"
-                android:layout_width="220dp"
+                android:id="@+id/mainlogo"
+                android:layout_width="180dp"
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
-                android:paddingLeft="30dp"
-                app:srcCompat="@drawable/main_logo" />
+                app:srcCompat="@drawable/main_logo"/>
 
             <TextView
-                android:id="@+id/textView2"
-                android:layout_width="240dp"
+                android:id="@+id/missionStatement"
+                android:layout_width="160dp"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
                 android:layout_marginStart="17dp"
-                android:layout_toStartOf="@+id/imageView3"
                 android:text="Towards Data Science"
                 android:textColor="@color/colorPrimaryDark"
-                android:textSize="20sp" />
+                android:textSize="20sp"/>
 
         </RelativeLayout>
 
@@ -54,7 +53,7 @@
             android:padding="2dp"
             android:background="@color/colorAccent"
             android:orientation="vertical"
-            app:tabMode="scrollable" />
+            app:tabMode="scrollable"/>
 
         <androidx.viewpager.widget.ViewPager
             android:id="@+id/viewPager"
@@ -63,12 +62,8 @@
             android:layout_marginTop="48dp"
             android:background="@color/colorPrimary">
 
-
         </androidx.viewpager.widget.ViewPager>
 
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
-
 </RelativeLayout>
-
-
