--- a/app/src/main/res/layout/fragment_news.xml
+++ b/app/src/main/res/layout/fragment_news.xml
@@ -1,4 +1,5 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -11,17 +12,16 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/worldNews"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:padding="3dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             android:scrollbars="vertical"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
-
 
 </FrameLayout>
