--- a/app/src/main/res/layout/fragment_portfoliomgmt.xml
+++ b/app/src/main/res/layout/fragment_portfoliomgmt.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -11,7 +12,6 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-
 
         <ScrollView
             android:id="@+id/mptresult"
@@ -34,13 +34,11 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:textColor="@color/colorPrimaryDark"
-                    android:textSize="19sp" />
+                    android:textSize="19sp"/>
 
             </LinearLayout>
 
-
         </ScrollView>
-
 
         <androidx.cardview.widget.CardView
             android:id="@+id/mpt"
@@ -57,44 +55,43 @@
 
                 <Spinner
                     android:id="@+id/selectStockMpt"
-                    android:layout_width="180dp"
+                    android:layout_width="@+id/mptClearPort"
                     android:layout_height="wrap_content"
                     android:textColor="@color/colorPrimaryDark"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
+                    app:layout_constraintEnd_toStartOf="@+id/mptClearPort"
+                    app:layout_constraintTop_toTopOf="parent"/>
 
                 <Button
                     android:id="@+id/mptBtn"
                     android:layout_width="wrap_content"
                     android:layout_height="90dp"
+                    android:layout_marginEnd="2dp"
                     android:text="Simulate"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toEndOf="@+id/mptClearPort"
-                    app:layout_constraintTop_toTopOf="parent" />
+                    app:layout_constraintTop_toTopOf="parent"/>
 
                 <Button
                     android:id="@+id/mptClearPort"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Clear Port    "
-                    app:layout_constraintStart_toEndOf="@+id/selectStockMpt"
-                    app:layout_constraintTop_toBottomOf="@+id/mptSimulation" />
+                    android:text="  Clear Port  "
+                    app:layout_constraintEnd_toStartOf="@+id/mptBtn"
+                    app:layout_constraintTop_toBottomOf="@+id/mptSimulation"/>
 
                 <Spinner
                     android:id="@+id/mptSimulation"
-                    android:layout_width="wrap_content"
+                    android:layout_width="@+id/mptClearPort"
                     android:layout_height="36dp"
                     android:layout_marginTop="5dp"
-                    android:text="Clear Result"
                     android:textColor="@color/colorPrimaryDark"
-                    app:layout_constraintStart_toEndOf="@+id/selectStockMpt"
-                    app:layout_constraintTop_toTopOf="parent" />
+                    app:layout_constraintStart_toStartOf="@+id/mptClearPort"
+                    app:layout_constraintTop_toTopOf="parent"/>
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
         </androidx.cardview.widget.CardView>
-
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
